[gd_scene load_steps=8 format=3 uid="uid://dhwccd7toqgfh"]

[ext_resource type="Script" uid="uid://dmr4pn1m72mve" path="res://GameUI/timer.gd" id="1_qdhxh"]
[ext_resource type="FontFile" uid="uid://ca27mwtgp0kcv" path="res://Fonts/superstar_memesbruh03.ttf" id="2_ye2uk"]

[sub_resource type="LabelSettings" id="LabelSettings_o6fnk"]
font = ExtResource("2_ye2uk")
font_size = 64
font_color = Color(0.7984335, 0.8016173, 1.540184e-06, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2sowu"]
font = ExtResource("2_ye2uk")
font_color = Color(0.07979252, 0.75365967, 7.70092e-07, 1)

[sub_resource type="Animation" id="Animation_2sowu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GainAmount:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GainAmount:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(42, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GainAmount:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(77, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GainAmount:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GainAmount:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GainAmount:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qun12"]
resource_name = "gain_time"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GainAmount:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GainAmount:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(42, -0.25, 0, 0.25, 0, 53, -0.03666667, -1.8333335, 0, 0, 50, -0.030000007, 0.50000006, 0, 0),
"times": PackedFloat32Array(0, 0.16666667, 0.33333334)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GainAmount:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(61, -0.25, 0, 0.25, 0, 85, -0.03666667, -4.0000005, 0, 0, 113, -0.030000007, -4.666667, 0, 0),
"times": PackedFloat32Array(0, 0.16666667, 0.33333334)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GainAmount:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.23217213, -0.03666667, -0.038695358, 0, 0, -0.33407074, -0.030000007, 0.094373815, 0, 0),
"times": PackedFloat32Array(0, 0.16666667, 0.33333334)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GainAmount:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.038888894, 0, 0, 0, 0.24313039, -0.027777782, 0.12614495, 0, 0),
"times": PackedFloat32Array(0, 0.18000002, 0.33333334)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GainAmount:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.038888894, 0, 0, 0, 0.24313039, -0.027777782, 0.12614495, 0, 0),
"times": PackedFloat32Array(0, 0.18000002, 0.33333334)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ca6p7"]
_data = {
&"RESET": SubResource("Animation_2sowu"),
&"gain_time": SubResource("Animation_qun12")
}

[node name="Timer" type="Control" groups=["timer_menu"]]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
script = ExtResource("1_qdhxh")

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 33.0
offset_top = 21.0
offset_right = 73.0
offset_bottom = 53.0
text = "30"
label_settings = SubResource("LabelSettings_o6fnk")

[node name="GainAmount" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 42.0
offset_top = 77.0
offset_right = 93.26047
offset_bottom = 100.00014
grow_horizontal = 2
text = "+ 2.0"
label_settings = SubResource("LabelSettings_2sowu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="." groups=["timer_cutscene_pausable"]]
wait_time = 60.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ca6p7")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
